# markdown-pdf-django

./: Makefile  README.md  db.sqlite3  main.py  pyproject.toml  requirements.txt
apps/converter/: apps.py  urls.py  views.py
apps/converter/backend/: __init__.py  conversor.py
apps/converter/backend/styles/: default.py
apps/converter/static/converter/: styles.css
apps/converter/templates/converter/: upload.html  upload_zip.html
core/: settings.py  urls.py
