[project]
name = "markdown-pdf-django"
version = "0.1.0"
description = "Simple WebApp to convert markdown to pdf"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "markdown>=3.8",
    "mathjax>=0.1.2",
    "pygments>=2.19.1",
    "pymdown-extensions>=10.15",
    "python-markdown-math>=0.9",
    "weasyprint>=65.1",
]
